slave02/service.yaml
kind: Service
apiVersion: v1
metadata:
  labels:
    app: mlkyoto2
  name: mlkyoto2
spec:
  ports:
    - port: 6000
      targetPort: 7000
  selector:
    app: mlkyoto2
