slave02/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mlkyoto2
  annotations:
    traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
  - http:
      paths:
      - path: /slave02
        backend:
          serviceName: mlkyoto2
          servicePort: 6000
